медиа запрос на 576 пикселей и стилизация

--- a/зачетный проект/index.html
+++ b/зачетный проект/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width">
       <title>зачетный макет</title>
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/all.min.css">
@@ -19,6 +20,10 @@
                </a>
             </div>
             <nav class="menu">
+               <input type="checkbox" id="menuburger">
+               <label for="menuburger" class="menuburger-lable">
+               <span class="burgerspan center"></span>
+               </label>
                <a href="#" class="menu-link">Home</a>
                <a href="#" class="menu-link">About Us</a>
                <a href="#" class="menu-link">Portfolio</a>
@@ -390,12 +395,12 @@
                </svg>
             </button>
          </section>
-         <sektion class="partners">
-            <a href="#" class="partners-link"><img src="img/logobarber.png" alt="logo" class="partners-logo" width="210" height="127"></a>
-            <a href="#" class="partners-link"><img src="img/logodelicious.png" alt="logo" class="partners-logo" width="210" height="210"></a>
-            <a href="#" class="partners-link"><img src="img/logodesigners.png" alt="logo" class="partners-logo" width="210" height="130"></a>
-            <a href="#" class="partners-link"><img src="img/logoroyal.png" alt="logo" class="partners-logo" width="210" height="164"></a>
-         </sektion>
+         <section class="partners">
+            <a href="#" class="partners-link  item1"><img src="img/logobarber.png" alt="logo" class="partners-logo" width="210" height="127"></a>
+            <a href="#" class="partners-link item2"><img src="img/logodelicious.png" alt="logo" class="partners-logo" width="210" height="210"></a>
+            <a href="#" class="partners-link item3"><img src="img/logodesigners.png" alt="logo" class="partners-logo" width="210" height="130"></a>
+            <a href="#" class="partners-link item4"><img src="img/logoroyal.png" alt="logo" class="partners-logo" width="210" height="164"></a>
+         </section>
       </main>
       <footer>
          <section class="add-information">
